--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,10 +106,11 @@ section {
     display: inline-block;
     border-bottom: 3px solid;
 }
-.intro{
+.intro {
     text-align: center;
 }
 .intro p {
+    text-align: center;
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
@@ -130,6 +131,7 @@ section {
     margin-bottom: 80px;
 }
 .steps img {
+    text-align: center;
     width: 15%;
     margin:10px 0;
 }
@@ -144,6 +146,44 @@ section {
 }
 .step span{
     font-size: 38px;
+}
+.trainers{
+    text-align: center;
+}
+.trainer{
+    width: 900px;
+    margin: 0 auto 30px auto;
+    color: #fce138;
+    background-color: #024e76;
+    overflow: auto;
+}
+.trainer img{
+    width:35%;
+    float:left;
+}
+.trainer-bio{
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+.trainer-bio h3{
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+.trainer-bio h4{
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+.trainer-bio p{
+    font-size: 17px;
+    line-height: 1.3;
+}
+.text-left{
+    text-align:left;
+}
+.text-right{
+    text-align: right;
 }
 *{
     margin: 0;
