--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,26 @@ section {
 .text-right{
     text-align: right;
 }
+.reach-out{
+    text-align: center;
+    background-color: #024e76;
+    color: #39a6b2;
+}
+.contact-info iframe{
+    width: 400px;
+    height: 400px;
+}
+.reach-out h2{
+    color: #fce138;
+}
+.reach-out div{
+    width: 410px;
+    display: inline;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
 *{
     margin: 0;
     padding: 0;
