--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,25 +185,37 @@ section {
 .text-right{
     text-align: right;
 }
-.reach-out{
+.contact{
     text-align: center;
     background-color: #024e76;
-    color: #39a6b2;
+}
+.contact h2{
+    color: #fce138;
 }
 .contact-info iframe{
     width: 400px;
     height: 400px;
 }
-.reach-out h2{
-    color: #fce138;
-}
-.reach-out div{
+.contact-info div{
     width: 410px;
-    display: inline;
+    display: inline-block;
     vertical-align: top;
     text-align: left;
     margin: 30px 0 0 60px;
     color: white;
+}
+.contact-info h3{
+    color: #fce148;
+    font-size: 32px;
+}
+.contact-info p, .contact-info address{
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-size: normal;
+}
+.contact-info a {
+    color: #fce138
 }
 *{
     margin: 0;
