--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,15 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 22px;
 }
+.hero-cta {
+    color: white;
+}
+.hero-cta h2{
+    color:#fce138;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    font-size: 45px;
+}
 footer {
     background: #fce138;
     width: 100%;
