--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,28 +36,59 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
 }
+/*Hero Style Start*/
+.hero {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    /*Hero Style End*/
+}
+.hero-form{
+    background-color: #fce138;
+    padding: 20px;
+    color: #024e76;
+    border: solid 3px #024e76;
+    width: 40%;
+    margin:3.5%;
+}
+.hero-form h3{
+    font-size: x-large;
+    margin: 0;
+}
+.hero-form p{
+    margin: 5px 0 15px 0;
+}
 .hero-cta {
+    width:35%;
+    text-align: right;
+    margin:3.5%;
     color: white;
+    font-size: 18px;
+    line-height: 1.3;
 }
 .hero-cta h2{
     color:#fce138;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
-    font-size: 45px;
+    font-size: 55px;
 }
 footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
 }
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -67,32 +98,7 @@ footer a {
 section {
     padding: 60px;
 }
-/*Hero Style Start*/
-.hero {
-    background-image: url("../images/hero-bg.jpg");
-    height: 600px;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
-    /*Hero Style End*/
-.hero-form{
-    background-color: #fce138;
-    padding: 20px;
-    width: 500px;
-    color: #024e76;
-    border: solid 3px #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 260px;
-}
-.hero-form h3{
-    font-size: x-large;
-    margin: 0;
-}
-.hero-form p{
-    margin: 5px 0 15px 0;
-}
+
 .form-input{
     border: 1px solid #fce138;
     display: block;
