--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,15 +121,14 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
-}
-.intro {
+    padding-bottom: 20px;
     text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .intro p {
+    text-align: center;
     text-align: center;
     line-height: 1.7;
     color: #39a6b2;
@@ -141,7 +140,6 @@ section {
     border-color: #fce138;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .secondary-border{
@@ -166,9 +164,6 @@ section {
 }
 .step span{
     font-size: 38px;
-}
-.trainers{
-    text-align: center;
 }
 .trainer{
     width: 900px;
@@ -205,8 +200,10 @@ section {
 .text-right{
     text-align: right;
 }
+.flex-row{
+    display: flex;
+}
 .contact{
-    text-align: center;
     background-color: #024e76;
 }
 .contact h2{
