--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,17 +5,25 @@ body {
 }
 /* apply styles to <header> */
 header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 header a {
     text-decoration: none;
@@ -35,6 +43,7 @@ header nav ul li a {
     margin: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 /*Hero Style Start*/
 .hero {
@@ -45,15 +54,19 @@ header nav ul li a {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     /*Hero Style End*/
 }
 .hero-form{
-    background-color: #fce138;
+    background-color :RGBA(252, 225, 56, .8);
     padding: 20px;
     color: #024e76;
     border: solid 3px #024e76;
     width: 40%;
     margin:3.5%;
+    box-shadow: 0 0 19px rgba(0, 0, 0, .5);
+    border-radius: 15px;
 }
 .hero-form h3{
     font-size: x-large;
@@ -75,6 +88,7 @@ header nav ul li a {
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-size: 55px;
+    text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 footer {
     display: flex;
@@ -101,7 +115,7 @@ section {
 }
 
 .form-input{
-    border: 1px solid #fce138;
+    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -118,6 +132,7 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
 }
 .section-title {
     font-size: 48px;
@@ -262,6 +277,7 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
 }
 .contact-form button{
     width: 100%;
@@ -270,6 +286,7 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
 }
 .contact-info a {
     color: #fce138
@@ -288,6 +305,7 @@ section {
     header{
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
     header h1{
         width: 100%;
