create better aesthetics

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,12 @@ header nav ul li a {
     font-size: 1.55vw;
     text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
+header nav ul li a:hover{
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+}
 /*Hero Style Start*/
 .hero {
     display:flex;
@@ -114,14 +120,26 @@ section {
     padding: 60px;
 }
 
-.form-input{
-    border-radius: 10px;
+.form{
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color:#024e76;
     width: 100%;
     margin-bottom: 15px;
+}
+.form input{
+    width: 100%;
+    font-size: 16px;
+    padding: 7px 15px;
+    border-radius: 10px;
+    border: 1px solid #024e76;
+    background-color: rgba(255, 255, 255, .75);
+    margin-bottom: 15px;
+}
+.form input:focus{
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 .hero-form label{
     margin: 0 5px;
@@ -133,6 +151,9 @@ section {
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 10px;
+}
+.hero-form button:hover{
+    background-color: #39a6b2;
 }
 .section-title {
     font-size: 48px;
@@ -185,11 +206,14 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+
+}
+.step:not(:last-child){
+    border-bottom: 1px solid #39a6b2;
 }
 .step-img{
     flex:1 12%;
@@ -278,6 +302,11 @@ section {
     margin-bottom: 15px;
     margin-top: 5px;
     border-radius: 10px;
+    background-color: rgba(255, 255, 255, .75);
+}
+.contact-form input:focus, .contact-form textarea:focus{
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 .contact-form button{
     width: 100%;
@@ -287,6 +316,10 @@ section {
     padding: 15px 0;
     font-size: 16px;
     border-radius: 10px;
+}
+.contact-form button:hover{
+    color:#fce138;
+    background: #39a6b2;
 }
 .contact-info a {
     color: #fce138
