--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root{
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
 body {
     /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
@@ -17,17 +22,18 @@ header {
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 header nav {
     margin: 7px 0;
@@ -46,10 +52,12 @@ header nav ul li a {
     text-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 header nav ul li a:hover{
-    background: #fce138;
-    color: #024e76;
-    border-radius: 15px;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 10px;
     text-shadow: none;
+    padding: 7px;
+    box-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 /*Hero Style Start*/
 .hero {
@@ -67,8 +75,8 @@ header nav ul li a:hover{
 .hero-form{
     background-color :RGBA(252, 225, 56, .8);
     padding: 20px;
-    color: #024e76;
-    border: solid 3px #024e76;
+    color: var(--secondary-color);
+    border: solid 3px var(--secondary-color)6;
     width: 40%;
     margin:3.5%;
     box-shadow: 0 0 19px rgba(0, 0, 0, .5);
@@ -90,7 +98,7 @@ header nav ul li a:hover{
     line-height: 1.2;
 }
 .hero-cta h2{
-    color:#fce138;
+    color:var(--primary-color);
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-size: 55px;
@@ -100,12 +108,12 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
 }
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -114,7 +122,7 @@ footer div {
     text-align: right;
 }
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 section {
     padding: 60px;
@@ -124,16 +132,15 @@ section {
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color:#024e76;
+    color:var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
 }
 .form input{
-    width: 100%;
     font-size: 16px;
     padding: 7px 15px;
     border-radius: 10px;
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     background-color: rgba(255, 255, 255, .75);
     margin-bottom: 15px;
 }
@@ -141,23 +148,74 @@ section {
     background-color: rgba(255, 255, 255, 1);
     outline: none;
 }
+.checkbox-wrapper input, .radio-wrapper input{
+    opacity: 0;
+}
+.checkbox-wrapper label, .radio-wrapper label{
+    position:relative;
+    left: 10px;
+    margin:10px;
+    line-height: 1.6;
+}
+.checkbox-wrapper label::before, .radio-wrapper label::before{
+    content:"";
+    height: 20px;
+    width:20px;
+    background: rgba(255, 255, 255, .75);
+    border: 1px solid var(--secondary-color);
+    position: absolute;
+    top: -4px;
+    left: -30px
+}
+.radio-wrapper label::before{
+    border-radius: 50%;
+}
+.radio-wrapper label::after{
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+}
+.checkbox-wrapper label::after{
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+}
 .hero-form label{
     margin: 0 5px;
 }
+.checkbox-wrapper input + label::after,
+.radio-wrapper input + label::after{
+    content: none;
+}
+.checkbox-wrapper input:checked + label::after,
+.radio-wrapper input:checked + label::after{
+    content:"";
+}
 .hero-form button{
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 10px;
 }
 .hero-form button:hover{
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -174,17 +232,17 @@ section {
     margin: 0 auto;
 }
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 .secondary-border{
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 .step h3 {
     flex: 1 30%;
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
 }
 .step-info{
@@ -200,7 +258,7 @@ section {
 .step-text h4{
     font-size: 26px;
     line-height: 1.5;
-    color:#024e76
+    color:var(--secondary-color)
 }
 .step{
     margin: 50px auto;
@@ -213,7 +271,7 @@ section {
 
 }
 .step:not(:last-child){
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
 }
 .step-img{
     flex:1 12%;
@@ -227,9 +285,10 @@ section {
 }
 .trainer{
     margin: 20px;
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     flex: 1;
+    box-shadow: 0 0 10px rgba(0,0,0, 0.5);
 }
 .trainer img{
     width:100%;
@@ -266,10 +325,10 @@ section {
     display: flex;
 }
 .contact{
-    background-color: #024e76;
+    background-color: var(--secondary-color);
 }
 .contact h2{
-    color: #fce138;
+    color: var(--primary-color);
 }
 .contact-info{
     display:flex;
@@ -283,7 +342,7 @@ section {
     color: white;
 }
 .contact-info h3{
-    color: #fce148;
+    color: var(--primary-color);
     font-size: 32px;
 }
 .contact-info p, .contact-info address{
@@ -293,11 +352,11 @@ section {
     font-size: normal;
 }
 .contact-form input, .contact-form textarea{
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -311,18 +370,18 @@ section {
 .contact-form button{
     width: 100%;
     border:none;
-    background: #fce138;
+    background: var(--primary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
     border-radius: 10px;
 }
 .contact-form button:hover{
-    color:#fce138;
-    background: #39a6b2;
+    color:var(--primary-color);
+    background: var(--tertiary-color);
 }
 .contact-info a {
-    color: #fce138
+    color: var(--primary-color);
 }
 .contact-info > *{
     flex:1;
